# polly-b-gone

./: .gitignore  Makefile  Makefile.am  README  README.md  configure.ac  intro.aup  outro.aup
doc/: xml-format.html
intro_data/e00/d00/: e0000034.au  e0000079.au  e00001e9.au  e000032d.au  e00003cd.au  e000083e.au  e00009a3.au  e0000a03.au  e0000b2f.au  e0000c58.au  e0000c6b.au  e0000d28.au  e0000d31.au  e0000dca.au  e0000e0b.au  e0000e34.au  e0000f81.au
outro_data/e00/d00/: e0000103.au  e000018a.au  e0000398.au  e0000548.au  e00005b8.au  e00006ba.au  e000091b.au  e00009f4.au  e0000a01.au  e0000a95.au  e0000c5e.au  e0000cbc.au  e0000f23.au  e0000fbe.au
resources/: COPYING.CC-BY-2.5  Makefile.am  README  polly-b-gone.desktop
resources-nonfree/: Makefile.am
src/: Makefile.am  SDLMain.m  escalator.cpp  fan.cpp  lighting.h  main.cpp  material.cpp  model.cpp  model.h  player.cpp  resource.cpp  room.cpp  room_object.cpp  room_object.h  seesaw.cpp  shader.cpp  shader.h  simulation.cpp  sound.cpp  sound.h  switch.cpp  texture.cpp  texture.h  transforming.cpp  world.cpp  worlds.cpp
src/physics/: force.cpp  force.h  rotation.h  translation.h  vector.cpp
