gamedir = ${datarootdir}/${PACKAGE_TARNAME}

game_DATA = \
	04ptboyf.ogg \
	ceramic.jpg \
	clovers.jpg \
	concrete.jpg \
	drain.jpg \
	half.ogg \
	hidnseek.ogg \
	ivy.jpg \
	metal.jpg \
	normal.frag \
	normal.vert \
	title.png \
	weeds.jpg \
	world.xml

EXTRA_DIST = $(game_DATA) Info.plist Polly.icns
