EXTRA_DIST = \
	SDLMain.h \
	SDLMain.m \
	physics/shape_test.cpp \
	physics/vector_test.cpp


bin_PROGRAMS = polly-b-gone


polly_b_gone_CXXFLAGS = \
	$(GL_CFLAGS) \
	$(GLU_CFLAGS) \
	$(GLUT_CFLAGS) \
	$(GLEW_CFLAGS) \
	$(SDL_CFLAGS) \
	$(SDL_IMAGE_CFLAGS) \
	$(SDL_MIXER_CFLAGS) \
	$(TINYXML2_CFLAGS)

polly_b_gone_LDADD = \
	$(GL_LIBS) \
	$(GLU_LIBS) \
	$(GLUT_LIBS) \
	$(GLEW_LIBS) \
	$(SDL_LIBS) \
	$(SDL_IMAGE_LIBS) \
	$(SDL_MIXER_LIBS) \
	$(TINYXML2_LIBS)

polly_b_gone_SOURCES = \
	ball.cpp \
	ball.h \
	block.cpp \
	block.h \
	escalator.cpp \
	escalator.h \
	fan.cpp \
	fan.h \
	lighting.cpp \
	lighting.h \
	main.cpp \
	material.cpp \
	material.h \
	model.cpp \
	model.h \
	player.cpp \
	player.h \
	portal.cpp \
	portal.h \
	ramp.cpp \
	ramp.h \
	resource.cpp \
	resource.h \
	room.cpp \
	room_force.cpp \
	room_force.h \
	room.h \
	room_object.cpp \
	room_object.h \
	rotating.cpp \
	rotating.h \
	seesaw.cpp \
	seesaw.h \
	shader.cpp \
	shader.h \
	simulation.cpp \
	simulation.h \
	sound.cpp \
	sound.h \
	switch.cpp \
	switch.h \
	texture.cpp \
	texture.h \
	trail.cpp \
	trail.h \
	transforming.cpp \
	transforming.h \
	translating.cpp \
	translating.h \
	tube.cpp \
	tube.h \
	wall.cpp \
	wall.h \
	world.cpp \
	world.h \
	worlds.cpp \
	worlds.h \
	physics/constraint.cpp \
	physics/constraint.h \
	physics/force.cpp \
	physics/force.h \
	physics/particle.cpp \
	physics/particle.h \
	physics/rotation.cpp \
	physics/rotation.h \
	physics/shape.cpp \
	physics/shape.h \
	physics/transform.cpp \
	physics/transform.h \
	physics/translation.cpp \
	physics/translation.h \
	physics/vector.cpp \
	physics/vector.h
